# ZeroClick

./: .gitignore  CHANGELOG.md  CLAUDE.md  PLAN-mobile-app.md  PLAN-multitenancy.md  PLAN_3.md  README.md  deploy.sh  firestore.rules  meta.md  plan.md  plan_2.md
api/: .dockerignore  Dockerfile  REFACTORING_PLAN.md  config.py  database.py  main.py  pyproject.toml  simulate_trip.py  simulate_trip_v2.py  test_audi.py
api/auth/: __init__.py  dependencies.py  google.py  middleware.py
api/car_providers/: __init__.py  audi.py  base.py  renault.py  skoda.py  tesla.py  vwgroup.py
api/middleware/: logging.py  request_id.py
api/models/: __init__.py  auth.py  car.py  export.py  location.py  trip.py
api/routes/: __init__.py  auth.py  cars.py  charging.py  locations.py  stats.py  trips.py  webhooks.py
api/routes/oauth/: __init__.py  audi.py  renault.py  tesla.py  vwgroup.py
api/scripts/: __init__.py  migrate_tesla_tokens.py
api/services/: __init__.py  car_service.py  export_service.py  location_service.py  token_service.py  trip_service.py  webhook_service.py
api/terraform/: .terraform.lock.hcl  apis.tf  artifact_registry.tf  cloud_run.tf  firestore.tf  iam.tf  main.tf  outputs.tf  scheduler.tf  secrets.tf  variables.tf
api/terraform/environments/: dev.backend.conf
api/tests/: conftest.py
api/tests/mocks/: __init__.py  mock_car_provider.py  mock_firestore.py
api/tests/unit/: test_auth_dependencies.py  test_bluetooth_priority.py  test_car_service.py  test_distance_calculation.py  test_error_recovery.py  test_geo.py  (+20 more)
api/utils/: __init__.py  encryption.py  errors.py  geo.py  ids.py  routing.py  secrets.py
(+344 files in other folders)
